api/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: softcon-api-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 8082
    targetPort: 5000
  selector:
    app: softcon-api
