api/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: softcon-api-ingress
spec:
#  tls:
#    - hosts:
#      - minikubetomcat
#      secretName: minikubetomcat-secret
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: softcon-api-service
            port:
              number: 8082
